feat: expose verified people skills api
